2007-09-14  Thomas Heller  <theller@python.net>

	* Released version 0.3.3.

2007-09-12  Thomas Heller  <theller@python.net>

	* Bump version number to 0.3.3.

2007-09-03  Thomas Heller  <theller@python.net>

	* Add the partial module, which allows the usual class statement
	syntax to attach methods to already existing classes.

	* Use partial in comtypes.automation to attach methods to
	POINTER(VARIANT).


2007-08-24  Thomas Heller  <theller@python.net>

	* Added a custom outgoing interface to TestComServer.idl.
	Implemented IConnectionPointContainer in TestComServer.py.

	* comtypes.server.automation: Fix the IProvideClassInfo2.GetGUID
	implementation.

	* comtypes.client: Fix ShowEvents(): COM methods must return a
	HRESULT value, not None.  Fix several NameErrors in the
	PumpWaitingMessages function.
	
2007-08-14  Thomas Heller  <theller@python.net>

	* comtypes\tools\codegenerator.py: Generate the needed imports
	when COM defaultvalues are used in parameter lists.

2007-08-10  Thomas Heller  <theller@python.net>

	* Add comtypes.client.PumpWaitingMessages() helper funtion.  May
	be used to dispatch COM events in single threaded appartments.

2007-08-09  Thomas Heller  <theller@python.net>

	* Added the IRecordInfo interface to comtypes.typeinfo.

	* If UDTs (structures or unions) in a typelib have a GUID defined,
	add a _recordinfo_ attribute to the generated code.  This allows
	to call GetRecordInfoFromGuids(*_recordinfo_) to get an
	IRecordInfo pointer.

	* Released comtypes-0.3.2

2007-08-08  Thomas Heller  <theller@python.net>

	* Add better support for dynamic dispatch, comtypes.CoUninitialize
	function.  Patch from Belyaev Dmitry.

2007-03-23  Thomas Heller  <theller@python.net>

	* Fixed: TextWrap did destroy the generated code when very long
	symbol names used were in the type library.

	* The IEnumVARIANT.Next(celt) method can now be called with
	celt != 1.  It will return a list of items then; this allows to get
	more objects at a time.
