@@ -1,3 +1,9 @@
+2007-10-02  Thomas Heller  <theller@python.net>
+
+	* comtypes.safearray.UnpackSafeArray can now unpack SAFEARRAYs
+	that containt UDT (user defined data types).  Patch by Rimon Barr,
+	testcase by me.
+
 2007-09-14  Thomas Heller  <theller@python.net>
 
 	* Released version 0.3.3.
